--- a/app.ipynb
+++ b/app.ipynb
@@ -26,7 +26,6 @@
    },
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas\n",
     "import matplotlib.pyplot as plot\n",
     "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score\n",
@@ -469,22 +468,22 @@
     "print(correlation_matrix)\n",
     "\n",
     "# Plot the relationship between 'Engine Size(L)', 'Fuel Consumption Hwy (L/100 km)', and 'CO2 Emissions(g/km)'\n",
-    "plt.figure(figsize=(14, 6))\n",
+    "plot.figure(figsize=(14, 6))\n",
     "\n",
-    "plt.subplot(1, 2, 1)\n",
+    "plot.subplot(1, 2, 1)\n",
     "sns.scatterplot(data=data, x='Engine Size(L)', y='Fuel Consumption Comb (L/100 km)', hue='CO2 Emissions(g/km)', palette='viridis')\n",
-    "plt.title('Engine Size(L) vs Fuel Consumption Comb (L/100 km) with CO2 Emissions(g/km)')\n",
-    "plt.xlabel('Engine Size(L)')\n",
-    "plt.ylabel('Fuel Consumption Comb (L/100 km)')\n",
+    "plot.title('Engine Size(L) vs Fuel Consumption Comb (L/100 km) with CO2 Emissions(g/km)')\n",
+    "plot.xlabel('Engine Size(L)')\n",
+    "plot.ylabel('Fuel Consumption Comb (L/100 km)')\n",
     "\n",
-    "plt.subplot(1, 2, 2)\n",
+    "plot.subplot(1, 2, 2)\n",
     "sns.scatterplot(data=data, x='Engine Size(L)', y='Fuel Consumption Comb (L/100 km)')\n",
-    "plt.title('Engine Size(L) vs Fuel Consumption Comb (L/100 km)')\n",
-    "plt.xlabel('Engine Size(L)')\n",
-    "plt.ylabel('Fuel Consumption Comb (L/100 km)')\n",
+    "plot.title('Engine Size(L) vs Fuel Consumption Comb (L/100 km)')\n",
+    "plot.xlabel('Engine Size(L)')\n",
+    "plot.ylabel('Fuel Consumption Comb (L/100 km)')\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "plot.tight_layout()\n",
+    "plot.show()"
    ],
    "outputs": [],
    "execution_count": null
@@ -511,6 +510,7 @@
     "X = np.hstack([np.ones((X.shape[0], 1)), X])\n",
     "\n",
     "# Split the data into training and testing sets\n",
+    "# Use 80% of the data for training and 20% for testing \n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Initialize parameters\n",
@@ -539,11 +539,11 @@
     "    theta -= (alpha / m) * X_train.T.dot(errors)\n",
     "\n",
     "# Plot the cost history\n",
-    "plt.plot(range(iterations), cost_history)\n",
-    "plt.xlabel(\"Iterations\")\n",
-    "plt.ylabel(\"Cost\")\n",
-    "plt.title(\"Error Improvement Over Iterations\")\n",
-    "plt.show()\n",
+    "plot.plot(range(iterations), cost_history)\n",
+    "plot.xlabel(\"Iterations\")\n",
+    "plot.ylabel(\"Cost\")\n",
+    "plot.title(\"Error Improvement Over Iterations\")\n",
+    "plot.show()\n",
     "\n",
     "# Evaluate the model on the test set using R² score\n",
     "y_test_pred = X_test.dot(theta)\n",
